# ZLREngine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  makefile
include/: camera.h  shaders.h
shaders/: cubeFragment  cubeVertex  fragment  lightFragment  lightVertex  vertex
src/: Constants.h  camera.cpp  glad.cpp  main.cpp  precomp.h  shaders.cpp  shaders.h
src/3C/: CameraManager.cpp  CameraManager.h  InputManager.cpp  InputManager.h  camera.cpp  camera.h
src/Events/: Event.cpp  Event.h  EventDispatcher.cpp  EventDispatcher.h  EventListener.cpp  EventListener.h
